#10536 closed bug (fixed)
Radeon drivers broken hrev46860
Reported by: | vidrep | Owned by: | kallisti5 |
---|---|---|---|
Priority: | high | Milestone: | R1/beta1 |
Component: | Drivers/Graphics/radeon_hd | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | #10614 | Blocking: | |
Platform: | All |
Description
Installed hrev46860 32 bit and 64 bit to hard drive partitions Intel Extreme driver working with both builds ATI Radeon HD 3470 DVI - 32 bit no signal
- 64 bit KDL on boot
ATI Radeon HD 3450 VGA - 32 bit no signal
- 64 bit no signal
Both video cards confirmed to work correctly on a4.1 using radeon drivers from dev build dated 2012/11/14.
Attachments (6)
Change History (27)
by , 7 years ago
Attachment: | listdev1_HD3470_DVI added |
---|
by , 7 years ago
Attachment: | listdev2_HD3450_VGA added |
---|
by , 7 years ago
Attachment: | syslog_dev added |
---|
by , 7 years ago
Attachment: | syslog_x86_64 added |
---|
comment:1 by , 7 years ago
Component: | - General → Drivers/Graphics/radeon_hd |
---|---|
Owner: | changed from | to
Priority: | normal → high |
Status: | new → assigned |
comment:2 by , 7 years ago
Milestone: | R1 → R1/alpha5 |
---|
comment:3 by , 7 years ago
*should* be fixed as of hrev46862. My card didn't have more than 16 GPIO pins so I didn't notice this issue. Thanks for reporting!
Give it a test and let us know if this one is resolved.
by , 7 years ago
Attachment: | IMG_0114.JPG added |
---|
comment:5 by , 7 years ago
I have some NVidia cards to test as well. If there is a problem I'll open a new ticket for those.
comment:7 by , 7 years ago
comment:9 by , 7 years ago
hrev46947_gcc2_hybrid Radeon HD2400 - DMS-59 - screen flashing between Desktop and black (working on alpha4.1) Radeon HD3450 - DVI & VGA - working Radeon HD3550 - DVI - working
hrev46947_x86_64 Radeon drivers not working - black screen, no signal with all cards.
After booting and blue screen appears, the time it takes to see the Desktop is taking on average 10 seconds longer than alpha 4.1. Maybe an unrelated problem?
comment:10 by , 7 years ago
The two Radeon cards described in the ticket (HD3450, HD3470) were working as of hrev46947. I'll open separate tickets for the non-working Radeon HD2400 and non-working 64 bit drivers described in last entry.
comment:11 by , 7 years ago
Blocking: | 7665 added |
---|
comment:12 by , 7 years ago
It seems like Julian Harnath's recent work broke radeon_hd across a large number of cards. I'm working on tracking down the offending commit to revert it.
comment:13 by , 7 years ago
The commit in question would be hrev46988. The issues initially described in this bug ticket are older than my changes though, so these are definitely a separate problem.
I'm still quite sure that the change in hrev46988 is correct though. However it could be another bug that surfaced because of it. As said last night on IRC, it would be very useful to have a syslog of one of the machines where it broke because of hrev46988 so I could see what could be wrong.
comment:15 by , 7 years ago
comment:16 by , 7 years ago
Perhaps this ticket should be modified to read "64 bit Radeon Drivers Broken", since the 32 bit drivers appear to have been fixed some time ago (see ticket #10563).
comment:17 by , 7 years ago
by , 7 years ago
Attachment: | syslog_HD3000 added |
---|
comment:18 by , 7 years ago
The 32 bit Radeon drivers appear to work for some time now. It is the 64 bit drivers which continue to have a problem. This ticket should probably be closed and move the 64 bit driver issue to ticket #10614 which is 64 bit specific.
comment:19 by , 7 years ago
Blocked By: | 10614 added |
---|---|
Resolution: | → fixed |
Status: | assigned → closed |
comment:20 by , 6 years ago
Milestone: | R1/alpha5 → R1/beta1 |
---|
comment:21 by , 3 years ago
Blocking: | 7665 removed |
---|
"KERN: radeon_hd: connector_read_edid: invalid gpio 0 for connector 0"
I reworked the GPIO pins recently... looks like something got messed up somewhere. I'll take a look at this one asap.