radeon_hd: Fix GPIOInfo pin shortage on some cards

* Some cards have a lot of pins!
* Should fix #10536
* Add a check to give a friendy warning if we find
  more GPIO pins than what we are prepared for.
* Technically the maximum GPIO pins could be
  ATOM device max * 2 (16 for i2c and other)
  however lets leave some room for expansion.